--- a/index.css
+++ b/index.css
@@ -7,3 +7,14 @@
     list-style: none;
     scroll-behavior: smooth;
 }
+
+:root {
+    --bg-color: #2a2a2a;
+    --second-bg-color: #202020;
+    --text-color: #fff;
+    --second-color: #ccc;
+    --main-color: #ff4d05;
+    --big-font: 5rem;
+    --h2-font: 3rem;
+    --p-font: 1.1rem;
+}
