--- a/index.css
+++ b/index.css
@@ -38,3 +38,14 @@ header {
     border-bottom: 1px transparent;
     transition: all .45s ease;
 }
+
+.logo {
+    color: var(--text-color);
+    font-size: 35px;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
+span {
+    color: var(--main-color);
+}
