--- a/index.css
+++ b/index.css
@@ -69,3 +69,12 @@ span {
 .navlist a.active {
     color: var(--main-color);
 }
+
+#menu-icon {
+    font-size: 35px;
+    color: var(--text-color);
+    z-index: 10001;
+    cursor: pointer;
+    margin-left: 25px;
+    display: none;
+}
