--- a/index.css
+++ b/index.css
@@ -78,3 +78,19 @@ span {
     margin-left: 25px;
     display: none;
 }
+
+section {
+    padding: 160px 15% 120px;
+}
+
+.home {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    background-image: url(../Reels/S3.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
