--- a/index.css
+++ b/index.css
@@ -206,13 +206,28 @@ header.sticky {
 }
 
 .about-img img {
-    max-width: 330px;
-    height: auto;
-    width: 100%;
+    max-width: 300px;
+    height: 60vh;
+    width: 80%;
     border-radius: 8px;
 }
 
 .about-text h2 {
     font-size: var(--h2-font);
     line-height: 1;
+}
+
+.about-text h4 {
+    font-size: 24px;
+    font-weight: 600;
+    color: var(--text-color);
+    line-height: 1.7;
+    margin: 15px 0 30px;
+} 
+
+.about-text p{
+    color: var(--second-color);
+    font-size: var(--p-font);
+    line-height: 1.4;
+    margin-bottom: 4rem;
 }
