--- a/index.css
+++ b/index.css
@@ -200,8 +200,9 @@ header.sticky {
 
 .about {
     display: grid;
+    height: 100vh;
     grid-template-columns: repeat(2, 1fr);
-    align-items: center;
+    /* align-items: center; */
     gap: 1.5rem;
 }
 
