--- a/index.css
+++ b/index.css
@@ -232,3 +232,30 @@ header.sticky {
     line-height: 1.4;
     margin-bottom: 4rem;
 }
+
+.services {
+    background: var(--second-bg-color);
+}
+
+.main-text {
+    text-align: center;
+}
+
+.main-text p {
+    color: var(--second-color);
+    font-size: 15px;
+    margin-bottom: 15px;
+}
+.main-text h2 {
+    font-size: var(--h2-font);
+    line-height: 1;
+}
+
+.services-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+    align-items: center;
+    gap: 2.5rem;
+    margin-top: 5rem;
+    
+}
