--- a/index.css
+++ b/index.css
@@ -338,4 +338,11 @@ header.sticky {
     left: 0;
     bottom: 0;
     overflow: hidden;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 0 40px;
+    transition: height 0.5s;
 }
