--- a/index.css
+++ b/index.css
@@ -445,3 +445,19 @@ header.sticky {
     background: var(--text-color);
     color: var(--main-color);
 }
+
+.contact-form form {
+    position: relative;
+}
+
+.contact-form form input, form textarea {
+    width: 100%;
+    padding: 14px;
+    background: var(--bg-color);
+    color: var(--text-color);
+    border: none;
+    outline: none;
+    font-size: 15px;
+    border-radius: 8px;
+    margin-bottom: 10px; 
+}
