--- a/index.css
+++ b/index.css
@@ -444,6 +444,7 @@ header.sticky {
 .contact-icons i:hover {
     background: var(--text-color);
     color: var(--main-color);
+    transform: scale(1.1);
 }
 
 .contact-form form {
@@ -460,4 +461,23 @@ header.sticky {
     font-size: 15px;
     border-radius: 8px;
     margin-bottom: 10px; 
+}
+
+.contact-form textarea {
+    resize: none;
+    height: 240px;
+}
+
+.contact-form .submit {
+    display: inline-block;
+    font-size: 16px;
+    background: var(--main-color);
+    color: var(--text-color);
+    width: 160px;
+    transition: all .45s ease;
+}
+
+.contact-form .submit:hover {
+    transform: scale(1.1);
+    cursor: pointer;
 }
