--- a/index.css
+++ b/index.css
@@ -527,5 +527,24 @@ header.sticky {
         --big-font: 4rem;
         --h2-font: 2.5rem;
         --p-font: 1rem;
+        transition: .1s;
+    }
+    .home {
+        height: 87vh;
+    }
+}
+
+@media (max-width: 920px) {
+    .about {
+        grid-template-columns: 1fr;
+    }
+    .about-img {
+        text-align: center;
+        order: 2;
+    }
+    .about-img img {
+        width: 100%;
+        height: 50vh;
+        max-width: 100%;
     }
 }
