--- a/index.css
+++ b/index.css
@@ -547,4 +547,31 @@ header.sticky {
         height: 50vh;
         max-width: 100%;
     }
+    .contact {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 840px) {
+    #menu-icon {
+        display: block;
+    }
+    .navlist {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        background: var(--bg-color);
+        text-align: left;
+        transition: all .45s ease;
+    }
+    .navlist a {
+        display: block;
+        margin: 17px;
+        font-size: 20px;
+        transition: all .45 ease;
+        color: var(--text-color);
+    }
 }
