--- a/index.css
+++ b/index.css
@@ -558,7 +558,7 @@ header.sticky {
     }
     .navlist {
         position: absolute;
-        top: 100%;
+        top: -1000px;
         right: 0;
         left: 0;
         display: flex;
@@ -573,5 +573,14 @@ header.sticky {
         font-size: 20px;
         transition: all .45 ease;
         color: var(--text-color);
+    }
+    .navlist a:hover {
+        color: var(--text-color);
+    }
+    .navlist a.active {
+        color: var(--text-color);
+    }
+    .navlist.open {
+        top: 100%;
     }
 }
